--- a/Complex/complex.css
+++ b/Complex/complex.css
@@ -6,7 +6,7 @@
    
 }
 body{
-    background-image:url(bg2.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,.5)),url(bg2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
  background-attachment: fixed;
